syntax = "proto3";

option java_package = "com.exonum.binding.common.serialization";
option java_outer_classname = "BlockProtos";
// Review: Can we generate a top-level class (e.g., BlockProto instead of BlockProtos.Block)?

message Block {
  int32 proposerId = 1;
  // Review: Why not `uint64` @drogan?
  int64 height = 2;
  int32 numTransactions = 3;
  bytes previousBlockHash = 4;
  bytes txRootHash = 5;
  bytes stateHash = 6;
}
